"/users/" added to path on some urls
